<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="my_title">My Nanodegree Apps!</string>
    <string name="media_streamer">media streamer</string>
    <string name="scores_app">scores app</string>
    <string name="library_app">library app</string>
    <string name="build_it_bigger">build it bigger</string>
    <string name="bacon_reader">bacon reader</string>
    <string name="capstone">capstone: my own app</string>
    <string name="button_toast">This button will launch %1$s</string>
</resources>
