<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.indywidualni.myappportfolio.MainActivity"
    android:background="@color/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/my_title"
        style="@style/TextAppearance.AppCompat.Large" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/media_streamer"
        android:id="@+id/media_streamer"
        android:layout_below="@+id/my_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        style="@style/OrangeButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scores_app"
        android:id="@+id/scores_app"
        android:layout_below="@+id/media_streamer"
        android:layout_centerHorizontal="true"
        style="@style/OrangeButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/library_app"
        android:id="@+id/library_app"
        android:layout_below="@+id/scores_app"
        android:layout_centerHorizontal="true"
        style="@style/OrangeButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:id="@+id/build_it_bigger"
        android:layout_below="@+id/library_app"
        android:layout_centerHorizontal="true"
        style="@style/OrangeButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bacon_reader"
        android:id="@+id/bacon_reader"
        android:layout_below="@+id/build_it_bigger"
        android:layout_centerHorizontal="true"
        style="@style/OrangeButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/capstone"
        android:layout_below="@+id/bacon_reader"
        android:layout_centerHorizontal="true"
        style="@style/AccentButton" />

</RelativeLayout>
